kubernetes/apps/grocy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: household
  labels:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/part-of: homelab
